Consolidated all ProjectedChromosomes into a single ProjectedGenome in AudioScene, eliminating the need for ProjectedGenomeSet. Accordingly, AutomationManager, ChordProgressionManager, DefaultChannelSectionFactory, EfxManager, MixdownManager, PatternLayerManager, RiseManager and SceneSectionManager are all updated to no longer require a dedicated ProjectedGenome. OptimizeFactorFeatures methods are updated to return a List of ProjectedGenes instead of expecting a dedicated ProjectedChromosome. Many minor test updates.